# advent-of-code

./: advent-of-code.cabal  advent-of-code.nix  create-new  flake.nix  notes
aoc-hs/: .gitignore  CHANGELOG.md  advent-of-code.nix  notes
aoc-hs/app/2022/: 01.hs  04.hs  07.hs  12.hs  13.hs
aoc-hs/app/2023/: 04.hs  05.hs  07.hs  09.hs  11.hs  13.hs  15.hs
aoc-hs/lib/: Grid.hs  Helpers.hs  Sized.hs
aoc-hs/lib/Year2022/: Day02.hs  Day04.hs  Day06.hs  Day11.hs  Day13.hs  Day15.hs  Day16.hs
aoc-hs/lib/Year2023/: Day01.hs  Day03.hs  Day08.hs  Day12.hs  Day13.hs  Day14.hs
aoc-jq/: bitwise.jq  utils.jq
aoc-jq/2024/: 01.jq  01a.jq  01b.jq  02.jq  02a.jq  02b.jq  03.jq  03a.jq  03b.jq  04.jq  04a.jq  04b.jq  05.jq  06-shared.jq  06.jq  06a.jq  06b.jq  07-shared.jq  07.jq  07a.jq  07b.jq  08.jq  09.jq  10.jq  11.jq  12.jq  13.jq  14.jq  16.jq  17.jq  19.jq
aoc-rs/: Cargo.toml
aoc-rs/src/: lib.rs
app/: 2022-01.hs  2022-02.hs  2022-03.hs  2022-04.hs  2022-05.hs  2022-06.hs  2022-07.hs  2022-08.hs  2022-09.hs  2022-10.hs  2022-11.hs  2022-12.hs  2022-13.hs  2022-14.hs  2022-15.hs  2022-16.hs
app/2022/: 02.hs  05.hs  06.hs  15.hs  2022-03.hs  2022-08.hs  2022-09.hs  2022-10.hs  2022-11.hs  2022-14.hs  2022-16.hs
app/2023/: 01.hs  02.hs  03.hs  06.hs  08.hs  12.hs  14.hs
data/2022/: 12-other.txt
data/2024/: 13.txt
lib/: Day_2022_01.hs  Day_2022_02.hs  Day_2022_03.hs  Day_2022_04.hs  Day_2022_05.hs  Day_2022_06.hs  Day_2022_07.hs  Day_2022_08.hs  Day_2022_09.hs  Day_2022_10.hs  Day_2022_11.hs  Day_2022_12.hs  Day_2022_13.hs  Day_2022_14.hs  Day_2022_15.hs  Day_2022_16.hs  Grid.hs  Helpers.hs  Sized.hs  TypeLevel.hs
lib/Year2022/: Day01.hs  Day03.hs  Day05.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day14.hs
lib/Year2023/: Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day09.hs  Day11.hs  Day15.hs
test/: 2022.hs  2023.hs  Main.hs
test/Year2023/Tests/: Day01.hs  Day02.hs
