cabal-version:      3.0
name:               advent-of-code
version:            2022.0.0.1
-- synopsis:
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Mathijs Kwik
maintainer:         mathijs@bluescreen303.nl

build-type:         Simple
extra-doc-files:    CHANGELOG.md
data-dir:           data/
data-files:         *.txt

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common commons
    ghc-options:      -Wall
    default-language: GHC2021
    other-modules:    Paths_advent_of_code
    build-depends:
        base >= 4.16.3.0 && < 4.18

library
    import:           commons

    hs-source-dirs:   lib
    exposed-modules:
        Grid
        Helpers
        Day_2022_01
        Day_2022_02
        Day_2022_03
        Day_2022_04
        Day_2022_05
        Day_2022_06
        Day_2022_07
        Day_2022_08
        Day_2022_09
        Day_2022_10
        Day_2022_11
    build-depends:
        parsec ^>=3.1.15.0,
        mtl >= 2.2 && < 2.4,
        comonad ^>= 5.0,
        ghc-prim ^>= 0.8,
        vector ^>= 0.13.0.0,
    -- Modules included in this library but not exported.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

executable 2022-01
    import:           commons

    hs-source-dirs:   app
    main-is:          2022-01.hs

    build-depends:
        advent-of-code

executable 2022-02
    import:           commons

    hs-source-dirs:   app
    main-is:          2022-02.hs

    build-depends:
        advent-of-code

executable 2022-03
    import:           commons

    hs-source-dirs:   app
    main-is:          2022-03.hs

    build-depends:
        advent-of-code

executable 2022-04
    import:           commons

    hs-source-dirs:   app
    main-is:          2022-04.hs

    build-depends:
        advent-of-code

executable 2022-05
    import:           commons

    hs-source-dirs:   app
    main-is:          2022-05.hs

    build-depends:
        advent-of-code

executable 2022-06
    import:           commons

    hs-source-dirs:   app
    main-is:          2022-06.hs

    build-depends:
        advent-of-code

executable 2022-07
    import:           commons

    hs-source-dirs:   app
    main-is:          2022-07.hs

    build-depends:
        advent-of-code

executable 2022-08
    import:           commons

    hs-source-dirs:   app
    main-is:          2022-08.hs

    build-depends:
        advent-of-code

executable 2022-09
    import:           commons

    hs-source-dirs:   app
    main-is:          2022-09.hs

    build-depends:
        advent-of-code

executable 2022-10
    import:           commons

    hs-source-dirs:   app
    main-is:          2022-10.hs

    build-depends:
        advent-of-code

executable 2022-11
    import:           commons

    hs-source-dirs:   app
    main-is:          2022-11.hs

    build-depends:
        advent-of-code

test-suite advent-of-code-test
    import:           commons

    hs-source-dirs:   test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs

    build-depends:
        advent-of-code,
        hspec >= 2.9.7 && < 2.11

