cabal-version:      3.0
name:               advent-of-code
version:            2023.0.0.1
-- synopsis:
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Mathijs Kwik
maintainer:         mathijs@bluescreen303.nl

build-type:         Simple
extra-doc-files:    CHANGELOG.md
data-dir:           data/
data-files:         **/*.txt

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common commons
    ghc-options:      -Wall
    default-language: GHC2021
    other-modules:    Paths_advent_of_code
    build-depends:
        base >= 4.16.3.0 && < 4.19,
        filepath >= 1.4.0.0 && < 1.5,

library
    import:           commons

    hs-source-dirs:   lib
    exposed-modules:
        Grid
        Helpers
        TypeLevel
        Year2022.Day01
        Year2022.Day02
        Year2022.Day03
        Year2022.Day04
        Year2022.Day05
        Year2022.Day06
        Year2022.Day07
        Year2022.Day08
        Year2022.Day09
        Year2022.Day10
        Year2022.Day11
        Year2022.Day12
        Year2022.Day13
        Year2022.Day14
        Year2022.Day15
        Year2022.Day16
        Year2023.Day01
    build-depends:
        parsec ^>=3.1.15.0,
        mtl >= 2.2 && < 2.4,
        comonad ^>= 5.0,
        ghc-prim >= 0.9 && < 0.11,
        vector ^>= 0.13.0.0,
        containers ^>= 0.6.5.1,
        parallel ^>= 3.2.2.0,
    -- Modules included in this library but not exported.
    other-modules:
        Sized
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

executable 2022-01
    import:           commons

    hs-source-dirs:   app/2022
    main-is:          2022-01.hs

    build-depends:
        advent-of-code

executable 2022-02
    import:           commons

    hs-source-dirs:   app/2022
    main-is:          2022-02.hs

    build-depends:
        advent-of-code

executable 2022-03
    import:           commons

    hs-source-dirs:   app/2022
    main-is:          2022-03.hs

    build-depends:
        advent-of-code

executable 2022-04
    import:           commons

    hs-source-dirs:   app/2022
    main-is:          2022-04.hs

    build-depends:
        advent-of-code

executable 2022-05
    import:           commons

    hs-source-dirs:   app/2022
    main-is:          2022-05.hs

    build-depends:
        advent-of-code

executable 2022-06
    import:           commons

    hs-source-dirs:   app/2022
    main-is:          2022-06.hs

    build-depends:
        advent-of-code

executable 2022-07
    import:           commons

    hs-source-dirs:   app/2022
    main-is:          2022-07.hs

    build-depends:
        advent-of-code

executable 2022-08
    import:           commons

    hs-source-dirs:   app/2022
    main-is:          2022-08.hs

    build-depends:
        advent-of-code

executable 2022-09
    import:           commons

    hs-source-dirs:   app/2022
    main-is:          2022-09.hs

    build-depends:
        advent-of-code

executable 2022-10
    import:           commons

    hs-source-dirs:   app/2022
    main-is:          2022-10.hs

    build-depends:
        advent-of-code

executable 2022-11
    import:           commons

    hs-source-dirs:   app/2022
    main-is:          2022-11.hs

    build-depends:
        advent-of-code

executable 2022-12
    import:           commons

    hs-source-dirs:   app/2022
    main-is:          2022-12.hs

    build-depends:
        advent-of-code

executable 2022-13
    import:           commons

    hs-source-dirs:   app/2022
    main-is:          2022-13.hs

    build-depends:
        advent-of-code

executable 2022-14
    import:           commons

    hs-source-dirs:   app/2022
    main-is:          2022-14.hs

    build-depends:
        advent-of-code

executable 2022-15
    import:           commons

    hs-source-dirs:   app/2022
    main-is:          2022-15.hs

    build-depends:
        advent-of-code

executable 2022-16
    import:           commons
    ghc-options:      -threaded

    hs-source-dirs:   app/2022
    main-is:          2022-16.hs

    build-depends:
        advent-of-code

executable 2023-01
    import:           commons

    hs-source-dirs:   app/2023
    main-is:          01.hs

    build-depends:
        advent-of-code

test-suite advent-of-code-2022
    import:           commons

    hs-source-dirs:   test
    type:             exitcode-stdio-1.0
    main-is:          2022.hs

    build-depends:
        advent-of-code,
        hspec >= 2.9.7 && < 2.11,
        containers ^>= 0.6.5.1,

test-suite advent-of-code-2023
    import:           commons

    hs-source-dirs:   test
    type:             exitcode-stdio-1.0
    main-is:          2023.hs

    build-depends:
        advent-of-code,
        hspec >= 2.9.7 && < 2.11,
